--- a/pom.xml
+++ b/pom.xml
@@ -393,14 +393,25 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+              </plugin>
+              <plugin>
+               <groupId>org.pitest</groupId>
+               <artifactId>pitest-maven</artifactId>
+               <version>1.1.5</version>
+               <configuration>
+                 <threads>2</threads>
+                 <targetClasses>
+                  <param>org.joml.*</param>
+                 </targetClasses>
+             </configuration>
+              </plugin>
 		</plugins>
 	</build>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.2</version>
+			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
